# Cache

./: CMakeLists.txt
src/: cache2.0.hpp  cache3.0.hpp  ideal.cpp  lfu.cpp  main.cpp
tests/: CMakeLists.txt  cache_test.cpp  cache_test.hpp
